<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f5f2d7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logotipo_contentDescription"
                android:src="@drawable/ic_logotipo"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider" />

            <View
                android:id="@+id/divider"
                android:layout_width="5dp"
                android:layout_height="150dp"
                android:background="@color/black"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="6dp"
                android:text="@string/job_description"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@id/cellphone"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintTop_toTopOf="@id/divider" />

            <TextView
                android:id="@+id/cellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/cellphone_description"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_cellphone"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintStart_toStartOf="@id/job"
                app:layout_constraintTop_toBottomOf="@id/job" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/email_description"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_email"
                app:layout_constraintBottom_toTopOf="@id/linkedin"
                app:layout_constraintStart_toStartOf="@id/job"
                app:layout_constraintTop_toBottomOf="@id/cellphone" />

            <TextView
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/linkedin_description"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_linkedin"
                app:layout_constraintBottom_toTopOf="@id/address"
                app:layout_constraintStart_toStartOf="@id/job"
                app:layout_constraintTop_toBottomOf="@id/email" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/address_description"
                android:textColor="@color/black"
                app:drawableStartCompat="@drawable/ic_address"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/job"
                app:layout_constraintTop_toBottomOf="@id/linkedin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>